--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
     "@craco/craco": "^6.1.2",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@material-ui/core": "^4.11.4",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "chart.js": "^3.3.0",
     "react": "^17.0.2",
+    "react-chartjs-2": "^3.0.3",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-sparklines": "^1.7.0",
     "sass": "^1.34.0",
     "web-vitals": "^1.0.1"
   },
